<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/CustomToolbar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="Billing Details"
        app:titleTextColor="#fff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.example.android_sdk.Input.CountryInput
                    android:id="@+id/country_input"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/field_height"
                    android:layout_marginLeft="@dimen/fields_padding"
                    android:layout_marginRight="@dimen/fields_padding"
                    android:layout_marginTop="@dimen/field_margin_top"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:nextFocusForward="@+id/year_input"
                    android:popupBackground="@color/spinner_background"
                    android:textSize="16sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/address_one_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fields_padding"
                    android:layout_marginRight="@dimen/fields_padding"
                    android:layout_marginTop="@dimen/field_margin_top"
                    android:hint="@string/address_one_placeholder">

                    <com.example.android_sdk.Input.AddressOneInput
                        android:id="@+id/address_one_input"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/field_height"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz1234567890."
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/card_view_details_text"
                        android:textSize="@dimen/card_detail_title_text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/address_two_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fields_padding"
                    android:layout_marginRight="@dimen/fields_padding"
                    android:layout_marginTop="@dimen/field_margin_top"
                    android:hint="@string/address_two_placeholder">

                    <EditText
                        android:id="@+id/address_two_input"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/field_height"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz1234567890."
                        android:hint="@string/address_two_placeholder"
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/card_view_details_text"
                        android:textSize="@dimen/card_detail_title_text" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/city_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fields_padding"
                    android:layout_marginRight="@dimen/fields_padding"
                    android:layout_marginTop="@dimen/field_margin_top"
                    android:hint="@string/city_placeholder">

                    <EditText
                        android:id="@+id/city_input"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/field_height"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz1234567890."
                        android:hint=""
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/card_view_details_text"
                        android:textSize="@dimen/card_detail_title_text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/state_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fields_padding"
                    android:layout_marginRight="@dimen/fields_padding"
                    android:layout_marginTop="@dimen/field_margin_top"
                    android:hint="@string/state_placeholder">

                    <EditText
                        android:id="@+id/state_input"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/field_height"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz1234567890."
                        android:hint="@string/state_placeholder"
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/card_view_details_text"
                        android:textSize="@dimen/card_detail_title_text" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/zipcode_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fields_padding"
                    android:layout_marginRight="@dimen/fields_padding"
                    android:layout_marginTop="@dimen/field_margin_top"
                    android:hint="@string/zipcode_placeholder">

                    <EditText
                        android:id="@+id/zipcode_input"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/field_height"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz1234567890.-"
                        android:hint="@string/zipcode_placeholder"
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/card_view_details_text"
                        android:textSize="@dimen/card_detail_title_text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fields_padding"
                    android:layout_marginRight="@dimen/fields_padding"
                    android:layout_marginTop="@dimen/field_margin_top"
                    android:hint="@string/phone_placeholder">

                    <EditText
                        android:id="@+id/phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/field_height"
                        android:digits="0123456789+-"
                        android:hint="@string/phone_placeholder"
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textColor="@color/card_view_details_text"
                        android:textSize="@dimen/card_detail_title_text" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/back"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/done_button" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>